--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <ul>
             <li><a href="#">Work</a></li>
             <li><a href="#">About Me</a></li>
-            <li><a href="#">Contact Me</a></li>
             <li><button class="cta">Enquire</button></li>
         </ul>
     </nav>
@@ -30,7 +29,7 @@
     </div>
     <div class="hero-image-wrapper">
         <div class="hero-image">
-            <img src="https://i.ibb.co/BcJFLW4/Frame-2147225500.jpg" alt="Hero Image">
+            <img src="https://i.ibb.co/BcJFLW4/Frame-2147225500.jpg">
         </div>
     </div>
 </section>
@@ -38,22 +37,17 @@
 <!-- Portfolio Section -->
 <section class="portfolio">
     <h2 class="section-heading">Some of My Best Works</h2>
-    <div class="projects-grid">
-        <div class="project-card">
-            <img src="https://via.placeholder.com/300x200" alt="Project 1">
+    <div class="projects-carousel">
+        <div class="carousel-track">
+            <div class="project-card"><img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Frame%201321318451.png" alt="Project 1"></div>
+            <div class="project-card"><img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Frame%201321318452.png" alt="Project 2"></div>
+            <div class="project-card"><img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Frame%201321318453.png" alt="Project 3"></div>
+            <div class="project-card"><img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Frame%201321318454.png" alt="Project 4"></div>
+            <div class="project-card"><img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Frame%201321318455.png" alt="Project 5"></div>
+            <div class="project-card"><img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Frame%201321318456.png" alt="Project 6"></div>
+            <div class="project-card"><img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Frame%201321318457.png" alt="Project 7"></div>
+            <div class="project-card"><img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Frame%201321318458.png" alt="Project 8"></div>
         </div>
-        <div class="project-card">
-            <img src="https://via.placeholder.com/300x200" alt="Project 2">
-        </div>
-        <div class="project-card">
-            <img src="https://via.placeholder.com/300x200" alt="Project 3">
-        </div>
-        <div class="project-card">
-            <img src="https://via.placeholder.com/300x200" alt="Project 4">
-        </div>
-    </div>
-    <div class="cta-container">
-        <a href="https://www.behance.net" target="_blank" class="btn-cta">Find more on Behance</a>
     </div>
 </section>
 
@@ -61,7 +55,7 @@
 <section class="about-me">
     <h2 class="section-heading">About Me</h2>
     <p class="about-text">
-        Hi, I'm Tejas, a multidisciplinary designer from Bangalore, India, with a focus on product and communication design.
+        Hi, I'm Tejas, a multidisciplinary designer from Bangalore, India, with a focus on product & communication design.
     </p>
 </section>
 
@@ -69,11 +63,11 @@
 <section class="brands">
     <h2 class="section-heading">Brands I've Worked With</h2>
     <div class="brands-grid">
-        <img src="https://via.placeholder.com/150x100" alt="Brand 1">
-        <img src="https://via.placeholder.com/150x100" alt="Brand 2">
-        <img src="https://via.placeholder.com/150x100" alt="Brand 3">
-        <img src="https://via.placeholder.com/150x100" alt="Brand 4">
-        <img src="https://via.placeholder.com/150x100" alt="Brand 5">
+        <img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Button%20Style%2010.png">
+        <img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Button%20Style%2011.png" alt="Brand 2">
+        <img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Button%20Style%2012.png">
+        <img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Button%20Style%208.png">
+        <img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Button%20Style%209.png">
     </div>
 </section>
 
@@ -82,19 +76,19 @@
     <h2 class="section-heading">Services Offered</h2>
     <div class="services-grid">
         <div class="service-card">
-            <img src="https://via.placeholder.com/300x200" alt="Service 1">
+            <img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Frame%202147225504.png">
             <h3>Designing A Brand</h3>
         </div>
         <div class="service-card">
-            <img src="https://via.placeholder.com/300x200" alt="Service 2">
+            <img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Frame%202147225505.png">
             <h3>Building A Website</h3>
         </div>
         <div class="service-card">
-            <img src="https://via.placeholder.com/300x200" alt="Service 3">
+            <img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Frame%202147225506.png">
             <h3>Developing An App</h3>
         </div>
         <div class="service-card">
-            <img src="https://via.placeholder.com/300x200" alt="Service 4">
+            <img src="https://raw.githubusercontent.com/tejasrajagopal/adc_test_host/0d7e95e7a413349660c3689e0715c883d573c879/Frame%202147225507.png">
             <h3>Creating Creatives</h3>
         </div>
     </div>
